<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">园区助手</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">设置</string>
    <string name="action_exit">退出</string>
    <string name="btn_app1">查天气</string>
    <string name="btn_app2">计算器</string>
    <string name="btn_About">关&#160;&#160;&#160;&#160;于</string>
    <string name="btn_Exit">退&#160;&#160;&#160;&#160;出</string>
    <string name="title_activity_menu">生活小助手</string>
    <string name="hello_world">你好天气!</string>
    <string name="title_activity_app1">天气小助手</string>
    <string name="title_activity_app2">计算小助手</string>
    <string name="text_day">今天</string>
    <string name="btn_Query">查询</string>
    <string name="wind">风向</string>
    <string name="city">城市</string>
    <string name="textrq1">今天</string>
    <string name="textrq2">周x</string>
    <string name="textrq3">周x</string>
    <string name="textrq4">周x</string>
    <string name="texttq1">天气信息</string>
    <string name="texttq2">天气信息</string>
    <string name="texttq3">天气信息</string>
    <string name="texttq4">天气信息</string>
    <string name="textqw1">温度信息</string>
    <string name="textqw2">温度信息</string>
    <string name="textqw3">温度信息</string>
    <string name="textqw4">温度信息</string>
    <string name="EditText">请输入要查询的城市>>></string>
    <string name="desc">这是一张图片233333</string>
    <string name="shishi">暂无实时温度</string>
    <string name="menu_settings">Settings</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="net_timeout">网络连接超时</string>
    <string name="net_failed">网络连接失败</string>
    <string name="data_error">数据错误</string>
    <string name="tap_load_more">点击查看详细内容</string>
    <string name="tap_load_less">点击查看缩略内容</string>
    <string name="cache_path">/kanxue/img</string>
    <string name="ageing_time">48</string>
    <string name="logout_alert_msg">确定要退出登录吗？</string>
    <string name="login_username_alert">用户名不能为空</string>
    <string name="login_passwd_alert">密码不能为空</string>
    <string name="forum_display_null">版面为空</string>
    <string name="login_fail_more_than_five">您已经超出了登录失败限制次数，请等待 15 分钟后重试</string>
    <string name="new_post_success">发帖成功</string>
    <string name="new_post_fail_within_thirty_seconds">禁止三十秒内连续发帖</string>
    <string name="new_post_fail_within_five_minutes">禁止五分钟内发相同贴</string>
    <string name="new_post_fail_not_enough_kx">现金不足, 无法发出高于现金数额的悬赏</string>
    <string name="about_message">这么多年来，在园区助手学到许多知识，非常感谢\n</string>
    <string-array name="topic_list">
        <item>选择话题</item>
        <item>【体育】</item>
        <item>【学习】</item>
        <item>【生活】</item>
        <item>【实习】</item>
        <item>【讨论】</item>
        <item>【下载】</item>
        <item>【分享】</item>
        <item>【注意】</item>
        <item>【翻译】</item>
        <item>【调查】</item>
        <item>【建议】</item>
    </string-array>
    <string-array name="trade_list">
        <item>选择交易类型</item>
        <item>【家电】</item>
        <item>【手机】</item>
        <item>【生活资料】</item>
        <item>【图书】</item>
        <item>【服饰】</item>
        <item>【其他】</item>
    </string-array>
    <string-array name="spingarr">
        <item>体育</item>
        <item>学习</item>
        <item>生活</item>
        <item>实习</item>
    </string-array>
    <string name="title_activity_response">ResponseActivity</string>
    <string name="title_activity_trade">TradeActivity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="title_activity_my_trade">MyTrade</string>


    <!-- TODO: Remove or change this placeholder text -->


    <string name="hello">Hello World！</string>


    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>


    <string name="label">"备忘事件"</string>
    <string name="alarm_list_title">"备忘录"</string>
    <string name="add_alarm">"添加备忘录"</string>
    <string name="desk_clock_button_description">"时钟显示"</string>
    <string name="default_label">"备忘录"</string>
    <string name="menu_desk_clock">"座钟"</string>
    <string name="menu_edit_alarm" >"修改备忘录设置"</string>
    <string name="enable_alarm">"启用备忘录"</string>
    <string name="delete_alarm">"取消备忘录"</string>
    <string name="disable_alarm">"停用备忘录"</string>
    <string name="delete_alarm_confirm">"将会取消此备忘录。"</string>
    <string name="alarm_notify_snooze_label">"<xliff:g id="LABEL">%s</xliff:g>（已暂停）"</string>
    <string name="alarm_repeat">"重复"</string>
    <string name="alarm_vibrate">"振动"</string>
    <string name="alert">"铃声"</string>
    <string name="time">"时间"</string>
    <string name="set_alarm">"设置备忘录"</string>

    <string name="done">"完成"</string>
    <string name="revert">"还原"</string>
    <string name="delete">"删除事件"</string>
    <string name="alarm_alert_dismiss_text">"取消"</string>
    <string name="alarm_volume_title">"铃声音量"</string>
    <string name="alarm_volume_summary">"设置铃声音量"</string>
    <string name="silent_alarm_summary">"静音"</string>
    <string name="alarm_notify_text">"选择暂停或关闭此提醒。"</string>
    <string name="alarm_alert_snooze_text">"暂停再响"</string>
    <string name="alarm_alert_alert_silenced">"备忘录提醒时间为 <xliff:g id="MINUTES">%d</xliff:g> 分钟"</string>
    <string name="alarm_notify_snooze_text">"已将备忘录设置为从现在起 <xliff:g id="TIME">%s</xliff:g>后再提醒。选中可以取消。"</string>
    <string name="alarm_alert_snooze_set">"暂停 <xliff:g id="MINUTES">%d</xliff:g> 分钟。"</string>

    <string-array name="alarm_set">
        <item msgid="5163476010406761625">"已将此备忘录设置为从现在起不到 1 分钟后提醒。"</item>
        <item msgid="7110525731259629055">"已将此备忘录设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g>后再提醒。"</item>
        <item msgid="7003982794086186185">"已将此备忘录设置为从现在起 <xliff:g id="HOURS">%2$s</xliff:g>后再提醒。"</item>
        <item msgid="7311021123230077742">"已将此备忘录设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g>后再提醒。"</item>
        <item msgid="8431715191823114872">"已将此备忘录设置为从现在起 <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
        <item msgid="3244151088673185428">"已将此备忘录设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
        <item msgid="3663661342600168814">"已将此备忘录设置为从现在起 <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
        <item msgid="7779544127785487304">"已将该备忘录设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
    </string-array>
    <string name="day">"1 天"</string>
    <string name="days">"<xliff:g id="DAYS">%s</xliff:g> 天"</string>
    <string name="hour">"1 小时"</string>
    <string name="hours" msgid="2071487018566991613">"<xliff:g id="HOURS">%s</xliff:g> 小时"</string>
    <string name="minute">"1 分钟"</string>
    <string name="minutes">"<xliff:g id="MINUTES">%s</xliff:g> 分钟"</string>
    <string name="every_day">"每天"</string>
    <string name="never">"一律不"</string>
    <string name="day_concat">", "</string>
    <string name="clock_instructions">"选择要显示的时钟。"</string>
    <string name="analog_gadget">"模拟时钟"</string>
    <string name="settings">"设置"</string>
    <string name="alarm_in_silent_mode_title">"静音模式下闹钟响"</string>
    <string name="alarm_in_silent_mode_summary">"手机处于静音模式时，闹钟仍会响"</string>
    <string name="snooze_duration_title">"再响间隔"</string>
    <string-array name="snooze_duration_entries">
        <item msgid="8337408933053603125">"5 分钟"</item>
        <item msgid="5294206441496024610">"10 分钟"</item>
        <item msgid="2165904039211935470">"15 分钟"</item>
        <item msgid="7248236967714374250">"20 分钟"</item>
        <item msgid="738394723625179423">"25 分钟"</item>
        <item msgid="1180222611308391616">"30 分钟"</item>
    </string-array>
    <string-array name="snooze_duration_values">
        <item msgid="3655014754453084122">"5"</item>
        <item msgid="8939029597449573449">"10"</item>
        <item msgid="3922647341176353315">"15"</item>
        <item msgid="5821804105985044459">"20"</item>
        <item msgid="6048861883552402852">"25"</item>
        <item msgid="2740866721232379791">"30"</item>
    </string-array>
    <string name="alarm_klaxon_service_desc">"在 DeskClock 中设置的备忘录铃声播放服务。"</string>

    <string name="mon">周一</string>
    <string name="tue">周二</string>
    <string name="wed">周三</string>
    <string name="thu">周四</string>
    <string name="fri">周五</string>
    <string name="sat">周六</string>
    <string name="sun">周日</string>
    <string name="c0">第一节</string>
    <string name="c1">第二节</string>
    <string name="c2">第三节</string>
    <string name="c3">第四节</string>
    <string name="c4">第五节</string>
    <string name="group_insert">添加课程</string>
    <string name="dialog_class">新增课程:</string>
    <string name="dialog_address">课室:</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="none">空</string>
    <string name="del">删除</string>
    <string name="insert_suc">已添加，后退以刷新页面</string>
    <string name="insert_fail">添加课程失败\n\n提示：\n每节课中的课程名不能重复</string>
    <string name="insert_none">课程名不能为空</string>
    <string name="del_suc">已删除,后退以刷新页面</string>
    <string name="del_fail">删除失败</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="add">添加</string>
    <string name="help_text">在课程页面长按 某课节 会弹出添加课程菜单。\n长按 已有课程 会弹出删除课程菜单。</string>
    <string name="about_text">课程表是每个学生都需要用到的……</string>
    <string name="dialog_teacher">任课老师:</string>
    <string name="exit">退出</string>

</resources>
